--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-
+{% block title-name %}
+    <title>Home</title>
+{% endblock %}
 
 {% block content %}
 <h1 style="text-align:center">Welcome to our Home!</h1>
