Allowed Hosts und Debug false gesetzt

--- a/main/members/templates/authenticate/login_page.html
+++ b/main/members/templates/authenticate/login_page.html
@@ -5,6 +5,11 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+<script>
+    const buttonPress = () => {
+        alert("Wer hat gefragt?");
+    }
+</script>
 
 <body>
 <div class="wrapper fadeInDown">
@@ -21,7 +26,7 @@
     </form>
 
     <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+      <a class="underlineHover" href="#" onclick=buttonPress();>Forgot Password?</a>
     </div>
 
   </div>
