--- a/main/app/templates/all_reports.html
+++ b/main/app/templates/all_reports.html
@@ -17,7 +17,7 @@
             <tr>      
                 <td>{{ x.stnumber }}</td>
                 <td class="text">{{ x.text }}</td>
-                <td>example date</td>   
+                <td>{{ x.date }}</td>   
             </tr>
             {% endfor %}
         </table>
