--- a/main/app/templates/base.html
+++ b/main/app/templates/base.html
@@ -27,7 +27,7 @@
             <a href="{% url 'report' %}">Create Report</a>
             <a href="{% url 'show_reports' %}">All Reports</a>
             <a href="{% url 'my_reports' %}">My Reports</a>
-            <a href="">Contact</a>
+            <a href="{% url 'graph' %}">Graphs</a>
           </div>
 
     <div class="main">
