--- a/main/app/templates/home.html
+++ b/main/app/templates/home.html
@@ -5,5 +5,29 @@
 {% endblock %}
 
 {% block content %}
-<h1 style="text-align:center">Welcome to our Home!</h1>
+<h1 style="text-align:center">Welcome {{ log_user }} !</h1>
+<br>
+<form method="post">
+<div class="input-group mb-3">
+        {% csrf_token %}
+    <input type="text" name="description" class="form-control" placeholder="Add Todo" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <button class="btn btn-primary" type="submit" id="button-addon2">Button</button>
+  </div>
+</form>
+
+  <br>
+<h2>Todos:</h2>
+<hr>
+<ul class="list-group">
+    {% for x in my_todos %}
+    {% if hour > x.hour|add:"1" %}
+    <li class="list-group-item list-group-item-danger">{{ x.text }}</li>
+    {% else %}
+    <li class="list-group-item list-group-item-primary">{{ x.text }}</li>
+    {% endif %}
+    <li class="list-group-item list-group-item-info">{{ x.date}}</li>
+    <hr>
+    {% endfor %}
+
+</ul>
 {% endblock %}
