--- a/main/app/templates/base.html
+++ b/main/app/templates/base.html
@@ -14,6 +14,8 @@
             <a href="{% url 'home' %}" class="logo">Home</a>
             <div class="head-right">
                 {% if user.is_authenticated %}
+                  {% block header %}
+                  {% endblock %}
                     <a href="{% url 'logout' %}">Logout</a>
                 {% else %}
                 <a href="{% url 'login' %}">Login</a>
@@ -169,6 +171,29 @@
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+.left-column {
+  width: 120px;;
+}
+
+.right-column {
+  float: right;
+}
+
+.variable-column {
+  width: 90%;
+}
+
+.home-table table {
+  width: 100%;
+  border-collapse: collapse;
+  }
+
+.home-table th {
+  border: 0;
+}
+
+
 
 
 </style>
