--- a/main/app/templates/create_reports.html
+++ b/main/app/templates/create_reports.html
@@ -10,24 +10,25 @@
 {% endblock %}
 
 {% block content %}
-<div class="container" style="text-align: center">
 <form method="post">
     {% csrf_token %}
-   <p><label for="stnumber">ST Nummer: </label></p>
-    <input type="number" name="stnumber">
-    <br><br>
-    <div class="form-group">
+    <div class="container">
+    <h2>
+        <label for="stnumber">ST Nummer:</label>
+    </h2>
+    <input class="form-control" type="text" placeholder="Modell" name="stnumber" aria-label="default input example">
+    <h2>
         <label for="description">Beschreibung</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
-      </div>
-    <br><br>
+    </h2>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
+    <h2>
+        <label for="status">Status:</label>
+    </h2>
     <label for="current_user">User: </label>
     <select class="form-select" aria-label="Default select example">
         <option selected value="{{ user }}" >{{ user }}</option>
     </select>
-    <br>
-    <br>
-    <button type="submit" class="btn btn-primary">Save</button>
+      <button style="margin-top: 20px; width: 100px;" class="btn btn-primary" type="submit" id="button-addon2">Add</button>
+    </div>
 </form>
-</div>
 {% endblock %}
