--- a/main/inventory/templates/inventory-base.html
+++ b/main/inventory/templates/inventory-base.html
@@ -29,7 +29,7 @@
         <div class="sidebar">
             <a href="{% url 'create_status' %}">Create Status</a>
             <a href="{% url 'add_device' %}">Add Device</a>
-            <a href="#">All Devices</a>
+            <a href="{% url 'all_devices' %}">All Devices</a>
             <a href="#">All People</a>
           </div>
 
