--- a/main/inventory/templates/all_devices.html
+++ b/main/inventory/templates/all_devices.html
@@ -20,16 +20,16 @@
             <tr>
                 <td>
                     {% if x.status.statusname == "Vergeben"  %}
-                            <a href="{% url 'remove_device' x.id %}" type="button" class="btn btn-secondary">Add</a>
+                            <a href="{% url 'remove_device' x.id %}" style="width: 80px;" type="button" class="btn btn-secondary">Remove</a>
                         {% else %}
-                            <a href="{% url 'give_device' x.id %}" type="button" class="btn btn-success">Add</a>
+                            <a href="{% url 'give_device' x.id %}" style="width: 80px;" type="button" class="btn btn-success">Add</a>
                         {% endif %}
                     </td>
                 <td>{{ x.date }}</td>      
                 <td>{{ x.model }}</td>
                 <td class="text">{{ x.serialnumber }}</td>
                 <td>{{ x.status.statusname }}</td>   
-                <td><a href="{% url 'delete_device' x.id %}"type="button" class="btn btn-danger">Delete</a></td>    
+                <td><a href="{% url 'delete_device' x.id %}" style="width: 80px;" type="button" class="btn btn-danger">Delete</a></td>    
             </tr>
             {% endfor %}
         </table>
