--- a/main/app/templates/base.html
+++ b/main/app/templates/base.html
@@ -8,6 +8,182 @@
     {% block title-name %}
     {% endblock %}
 </head>
+
+<style>
+
+  body {
+  margin: 0;
+  }
+
+  .main {
+  margin-left: 160px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+  margin-top: 89px;
+  }
+
+  .head {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 2;
+  }
+
+  .head a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  }
+
+  .head-right {
+  float: right;
+  }
+
+  
+
+  .head a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+  }
+
+  .head a:hover {
+  background-color: #ddd;
+  color: black;
+  }
+
+  .head a:active {
+  background-color: dodgerblue;
+  color: white;
+  }
+
+  .sidebar {
+  height: 100%; 
+  width: 160px; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  background-color: #111; 
+  overflow-x: hidden; 
+  padding-top: 20px;
+
+  }
+
+  .sidebar a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  }
+
+  .sidebar a:hover {
+  color: #f1f1f1;
+  }
+
+@media screen and (max-width: 500px) {
+.header a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+.header-right {
+  float: none;
+}
+}
+
+@media screen and (max-height: 450px) {
+.sidebar {padding-top: 15px;}
+.sidebar a {font-size: 18px;}
+}
+.form-select{
+text-align: center;
+  }
+
+.reports {
+  text-align: center;
+  list-style-type: none;
+  border-collapse: collapse;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  padding: 10px;
+}
+
+.reports td, th {
+border: 1px solid #dddddd;
+padding: 8px;
+
+}
+
+.reports table {
+min-width: 100%;
+}
+tr:nth-child(even) {
+background-color: #dddddd;
+}
+
+.left-column {
+width: 120px;;
+}
+
+.right-column {
+float: right;
+}
+
+.variable-column {
+width: 90%;
+}
+
+.home-table table {
+width: 100%;
+border-collapse: collapse;
+}
+
+.home-table th {
+border: 0;
+}
+
+.form-control {
+width: 100%;
+text-align: center;
+align-items: center;
+}
+
+.container {
+display: flex;
+align-items: center;
+flex-direction: column;
+width: 40%;
+}
+
+.dropdown-container {
+  display: none;
+  background-color: #262626;
+  padding-left: 8px;
+}
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+
+
+</style>
+
+
 <body>
 
         <div class="head">
@@ -27,7 +203,11 @@
   
     
         <div class="sidebar">
+          <a href="#" class="dropdown-btn">Create 
+            <i class="arrow down"></i></a> 
+          <div class="dropdown-container">
             <a href="{% url 'report' %}">Create Report</a>
+          </div>
             <a href="{% url 'show_reports' %}">All Reports</a>
             <a href="{% url 'my_reports' %}">My Reports</a>
             <a href="{% url 'graph' %}">Graphs</a>
@@ -53,159 +233,22 @@
 </html>
 
 
-<style>
 
-    body {
-    margin: 0;
-    }
 
-    .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-    margin-top: 89px;
-    }
+<script>
+  var dropdown = document.getElementsByClassName("dropdown-btn");
+var i;
 
-    .head {
-    overflow: hidden;
-    background-color: #f1f1f1;
-    padding: 20px 10px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 2;
-    }
-
-    .head a.logo {
-    font-size: 25px;
-    font-weight: bold;
-    }
-
-    .head-right {
-    float: right;
-    }
-
-    
-
-    .head a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-    }
-
-    .head a:hover {
-    background-color: #ddd;
-    color: black;
-    }
-
-    .head a:active {
-    background-color: dodgerblue;
-    color: white;
-    }
-
-    .sidebar {
-    height: 100%; 
-    width: 160px; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    background-color: #111; 
-    overflow-x: hidden; 
-    padding-top: 20px;
-
-    }
-
-    .sidebar a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    }
-
-    .sidebar a:hover {
-    color: #f1f1f1;
-    }
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
+for (i = 0; i < dropdown.length; i++) {
+dropdown[i].addEventListener("click", function() {
+  this.classList.toggle("active");
+  var dropdownContent = this.nextElementSibling;
+  if (dropdownContent.style.display === "block") {
+    dropdownContent.style.display = "none";
+  } else {
+    dropdownContent.style.display = "block";
   }
-  .header-right {
-    float: none;
-  }
-}
+});
+} 
 
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-.form-select{
-  text-align: center;
-    }
-
-  .reports {
-    text-align: center;
-    list-style-type: none;
-    border-collapse: collapse;
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-    padding: 10px;
-  }
-
-  .reports td, th {
-  border: 1px solid #dddddd;
-  padding: 8px;
-  
-}
-
-.reports table {
- min-width: 100%;
-}
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
-.left-column {
-  width: 120px;;
-}
-
-.right-column {
-  float: right;
-}
-
-.variable-column {
-  width: 90%;
-}
-
-.home-table table {
-  width: 100%;
-  border-collapse: collapse;
-  }
-
-.home-table th {
-  border: 0;
-}
-
-.form-control {
-  width: 100%;
-  text-align: center;
-  align-items: center;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 40%;
-}
-
-
-</style>
+</script>
