--- a/main/inventory/templates/inventory-base.html
+++ b/main/inventory/templates/inventory-base.html
@@ -8,6 +8,306 @@
     {% block title-name %}
     {% endblock %}
 </head>
+
+<style>
+
+  body {
+  margin: 0;
+  }
+
+  body a {
+    color: inherit;
+  }
+  .main {
+  margin-left: 160px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+  margin-top: 89px;
+  }
+
+  .head {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 2;
+  }
+
+  .head a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  }
+
+  .head-right {
+  float: right;
+  }
+
+  
+
+  .head a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+  }
+
+  .head a:hover {
+  background-color: #ddd;
+  color: black;
+  }
+
+  .head a:active {
+  background-color: dodgerblue;
+  color: white;
+  }
+
+  .sidebar {
+  height: 100%; 
+  width: 160px; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  background-color: #111; 
+  overflow-x: hidden; 
+  padding-top: 20px;
+
+  }
+
+  .sidebar a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  }
+
+  .sidebar a:hover {
+  color: #f1f1f1;
+  }
+
+@media screen and (max-width: 500px) {
+.header a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+.header-right {
+  float: none;
+}
+}
+
+@media screen and (max-height: 450px) {
+.sidebar {padding-top: 15px;}
+.sidebar a {font-size: 18px;}
+}
+
+.reports {
+  text-align: center;
+  list-style-type: none;
+  border-collapse: collapse;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  padding: 10px;
+}
+
+.reports td, th {
+border: 1px solid #dddddd;
+padding: 8px;
+
+}
+
+.reports table {
+min-width: 100%;
+}
+tr:nth-child(even) {
+background-color: #dddddd;
+}
+
+.left-column {
+width: 120px;;
+}
+
+.right-column {
+float: right;
+}
+
+.variable-column {
+width: 90%;
+}
+
+.home-table table {
+width: 100%;
+border-collapse: collapse;
+}
+
+.home-table th {
+border: 0;
+}
+
+.form-control {
+  width: 40%;
+  text-align: center;
+  align-items: center;
+}
+
+.test {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.text input, label {
+  margin: 10px;
+}
+
+.form-select {
+  width: 40%;
+  text-align: center;
+  align-items: center;
+}
+
+.dropdown-container {
+  display: none;
+  background-color: #262626;
+  padding-left: 8px;
+}
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+
+
+/* Just for "info_device.html" */
+:root {
+    --red: hsl(0, 78%, 62%);
+    --cyan: hsl(180, 62%, 55%);
+    --orange: hsl(34, 97%, 64%);
+    --blue: hsl(212, 86%, 64%);
+    --varyDarkBlue: hsl(234, 12%, 34%);
+    --grayishBlue: hsl(229, 6%, 66%);
+    --veryLightGray: hsl(0, 0%, 98%);
+    --weight1: 200;
+    --weight2: 400;
+    --weight3: 600;
+}
+
+.attribution { 
+    font-size: 11px; text-align: center; 
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+
+
+
+
+@media (max-width: 400px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+}
+
+.header {
+    text-align: center;
+    line-height: 0.8;
+    margin-bottom: 50px;
+    margin-top: 100px;
+}
+
+.header p {
+    margin: 0 auto;
+    line-height: 2;
+    color: var(--grayishBlue);
+}
+
+
+.box p {
+    color: var(--grayishBlue);
+}
+
+.box {
+    border-radius: 5px;
+    box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+    padding: 30px;
+    margin: 20px;  
+}
+
+img {
+    float: right;
+}
+
+@media (max-width: 450px) {
+    .box {
+        height: 200px;
+    }
+}
+
+@media (max-width: 950px) and (min-width: 450px) {
+    .box {
+        text-align: center;
+        height: 180px;
+    }
+}
+
+.cyan {
+    border-top: 3px solid var(--cyan);
+}
+.red {
+    border-top: 3px solid var(--red);
+}
+.blue {
+    border-top: 3px solid var(--blue);
+}
+.orange {
+    border-top: 3px solid var(--orange);
+}
+
+
+@media (min-width: 950px) {
+    .row1-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .row2-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box-down {
+        position: relative;
+        top: 150px;
+    }
+    .box {
+        width: 20%;
+     
+    }
+    .header p {
+        width: 30%;
+    }
+    
+}
+/* Just for "info_device.html" end */
+
+
+
+</style>
+
 <body>
 
         <div class="head">
@@ -27,10 +327,16 @@
   
     
         <div class="sidebar">
+            <a href="#" class="dropdown-btn">Create 
+              <i class="arrow down"></i></a>
+            </a>
+            <div class="dropdown-container">
             <a href="{% url 'create_status' %}">Create Status</a>
-            <a href="{% url 'add_device' %}">Add Device</a>
+            <a href="{% url 'create_device' %}">Create Device</a>
+            <a href="{% url 'create_people' %}">Create Person</a>
+            </div>
             <a href="{% url 'all_devices' %}">All Devices</a>
-            <a href="#">All People</a>
+            <a href="{% url 'all_people' %}">All People</a> 
           </div>
 
     <div class="main">
@@ -52,167 +358,22 @@
 </body>
 </html>
 
+<script>
+  var dropdown = document.getElementsByClassName("dropdown-btn");
+var i;
 
-<style>
-
-    body {
-    margin: 0;
-    }
-
-    .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-    margin-top: 89px;
-    }
-
-    .head {
-    overflow: hidden;
-    background-color: #f1f1f1;
-    padding: 20px 10px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 2;
-    }
-
-    .head a.logo {
-    font-size: 25px;
-    font-weight: bold;
-    }
-
-    .head-right {
-    float: right;
-    }
-
-    
-
-    .head a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-    }
-
-    .head a:hover {
-    background-color: #ddd;
-    color: black;
-    }
-
-    .head a:active {
-    background-color: dodgerblue;
-    color: white;
-    }
-
-    .sidebar {
-    height: 100%; 
-    width: 160px; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    background-color: #111; 
-    overflow-x: hidden; 
-    padding-top: 20px;
-
-    }
-
-    .sidebar a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    }
-
-    .sidebar a:hover {
-    color: #f1f1f1;
-    }
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
+for (i = 0; i < dropdown.length; i++) {
+dropdown[i].addEventListener("click", function() {
+  this.classList.toggle("active");
+  var dropdownContent = this.nextElementSibling;
+  if (dropdownContent.style.display === "block") {
+    dropdownContent.style.display = "none";
+  } else {
+    dropdownContent.style.display = "block";
   }
-  .header-right {
-    float: none;
-  }
-}
+});
+} 
 
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-
-.reports {
-    text-align: center;
-    list-style-type: none;
-    border-collapse: collapse;
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-    padding: 10px;
-  }
-
-  .reports td, th {
-  border: 1px solid #dddddd;
-  padding: 8px;
-  
-}
-
-.reports table {
- min-width: 100%;
-}
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
-.left-column {
-  width: 120px;;
-}
-
-.right-column {
-  float: right;
-}
-
-.variable-column {
-  width: 90%;
-}
-
-.home-table table {
-  width: 100%;
-  border-collapse: collapse;
-  }
-
-.home-table th {
-  border: 0;
-}
-
-.form-control {
-    width: 40%;
-    text-align: center;
-    align-items: center;
-}
-
-.test {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.text input, label {
-    margin: 10px;
-}
-
-.form-select {
-    width: 40%;
-    text-align: center;
-    align-items: center;
-}
+</script>
 
 
-
-</style>
