--- a/main/inventory/templates/inventory-home.html
+++ b/main/inventory/templates/inventory-home.html
@@ -15,7 +15,7 @@
 <form method="post">
 <div class="input-group mb-3">
         {% csrf_token %}
-    <input type="text" name="description" class="form-control" placeholder="Add Todo" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <input type="text" name="description" class="form-control" id="form-control" placeholder="Add Todo" aria-label="Recipient's username" aria-describedby="button-addon2">
     <button class="btn btn-primary" type="submit" id="button-addon2">Button</button>
   </div>
 </form>
