--- a/main/app/templates/create_reports.html
+++ b/main/app/templates/create_reports.html
@@ -16,7 +16,7 @@
     <h2>
         <label for="stnumber">ST Nummer:</label>
     </h2>
-    <input class="form-control" type="text" placeholder="Modell" name="stnumber" aria-label="default input example">
+    <input class="form-control" type="text" placeholder="" name="stnumber" aria-label="default input example">
     <h2>
         <label for="description">Beschreibung</label>
     </h2>
