--- a/main/inventory/templates/all_devices.html
+++ b/main/inventory/templates/all_devices.html
@@ -6,6 +6,23 @@
 
 
 {% block content %}
+<div class="search-bar">
+    <form method="post">
+        {% csrf_token %}
+        <div>
+            <label for="search" style="font-size: 28px;">Filter: </label>
+                <select name="drop_filter" class="col-sm-2 col-form-label">
+                    <option selected value="nothing">Filter</option>
+                    <option value="date">Datum</option>
+                    <option value="model">Model</option>
+                    <option value="serialnumber">Seriennummer</option>
+                    <option value="status">Status</option>
+                </select>
+            <input class="col-sm-2 col-form-label" name="search" type="text" placeholder="searching for ...">
+            <button class="btn btn-primary" type="submit" id="button-addon2" style="height: 40px; margin-bottom: 5px;">Filter</button>
+        </div>
+    </form>
+
     <div class="reports">
         <table>
             <tr>
