--- a/main/inventory/templates/all_people.html
+++ b/main/inventory/templates/all_people.html
@@ -6,6 +6,25 @@
 
 
 {% block content %}
+<div class="search-bar">
+<form method="post">
+    {% csrf_token %}
+    <div>
+        <label for="search" style="font-size: 28px;">Filter: </label>
+            <select name="drop_filter" class="col-sm-2 col-form-label">
+                <option selected value="nothing">Filter</option>
+                <option value="stnumber">ST</option>
+                <option value="fname">First Name</option>
+                <option value="lname">Last Name</option>
+                <option value="device">Device</option>
+            </select>
+        <input class="col-sm-2 col-form-label" name="search" type="text" placeholder="searching for ...">
+        <button class="btn btn-primary" type="submit" id="button-addon2" style="height: 40px; margin-bottom: 5px;">Filter</button>
+    </div>
+</form>
+
+</div>
+
     <div class="reports">
         <table>
             <tr>
@@ -23,13 +42,14 @@
                 {% if x.device.serialnumber == false %}
                 <td>none</td>
                 {% else %}
-                <td>{{ x.device.serialnumber }}</td>
+                <td><a href="{% url 'info_device' x.id %}">{{ x.device.serialnumber }}</a></td>
                 {% endif %}
                 <td><a href="{% url 'delete_people' x.id %}" style="width: 80px;" type="button" class="btn btn-danger">Delete</a></td>    
             </tr>
             {% endfor %}
         </table>
     </div>
+    
 {% endblock %}
 
 
