Verbesserungen bezüglich creating stuff

--- a/main/inventory/templates/create_people.html
+++ b/main/inventory/templates/create_people.html
@@ -34,8 +34,9 @@
         </h2>
         <select name="device" class="form-select form-select-md" aria-label=".form-select-sm example">
             <option selected value="nothing">Open to select Device</option>
+            <option value="null">None</option>
             {% for x in all_devices %}
-            <option value="{{ x.model }}">{{ x.model }} | {{ x.serialnumber}}</option>
+            <option value="{{ x.model }}">{{ x.model }} | {{ x.serialnumber }}</option>
             {% endfor %}
           </select>
           <button style="margin-top: 20px; width: 100px;" class="btn btn-primary" type="submit" id="button-addon2">Add</button>
